--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "firebase": "^9.5.0",
     "leaflet": "^1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
